--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,9 +8,10 @@
 @import "layout/main";
 
 @import "components/button";
+@import "components/dialog";
+@import "components/lightbox";
 @import "components/cost-info";
 @import "components/quantity-adder";
 @import "components/product-gallery";
-@import "components/icons";
 
 @import "pages/home";
