--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -22,3 +22,10 @@ $vw-desktop-max: 1400px;
 
 // PATH
 $image-path: "../../images";
+
+// SHADOW 
+$shadow: 0 1px 1px hsla(0deg, 0%, 0% , 0.075),
+      0 2px 2px hsla(0deg ,0% ,0% ,0.075),
+      0 4px 4px hsla(0deg ,0% ,0% , 0.075),
+      0 8px 8px hsla(0deg ,0% ,0% , 0.075)
+    ;
