--- a/sass/components/_cost-info.scss
+++ b/sass/components/_cost-info.scss
@@ -1,27 +1,31 @@
 .cost__info {
-  font-size: 1rem;
-  position: relative;
-  &__price {
-    float: left;
-    &--special {
-      font-size: 2em;
-      font-weight: bold;
-      margin-bottom: .2em;
-    }
-    &--actual {
-      color: $color-darkgrayish-blue;
-      font-size: 1.5em;
-      text-decoration: line-through;
-    }
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
+  @media screen and (max-width: $vw-mobile-min) {
+    flex-direction: row;
+    justify-content: space-between;
   }
-  &--discount {
-    margin-left: 1em;
-    float: left;
-    display: inline-block;
-    padding: .5em .8em;
-    border-radius: .3em;
-    background-color: $color-primary-light;
+  &__pd {
+    display: flex;
+  }
+  .price {
+    font-size: 1em;
+    font-weight: 700;
+  }
+  .discount {
+    font-size: .54em;
+    font-weight: 700;
+    padding: .4em .6em;
+    margin-top: .3em;
+    margin-left: .7em;
+    border-radius: .2em;
     color: $color-primary;
-    font-weight: bold;
+    background-color: $color-primary-light;
+  }
+  .actual-price {
+    font-size: .6em;
+    text-decoration: line-through;
+    color: $color-darkgrayish-blue;
   }
 }
