--- a/sass/index.scss
+++ b/sass/index.scss
@@ -6,6 +6,7 @@
 
 @import "layout/header";
 @import "layout/main";
+@import "layout/sidebar";
 
 @import "components/button";
 @import "components/dialog";
