--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -15,6 +15,7 @@
     padding: 1rem;
     background: none;
     border: none;
+    cursor: pointer;
     svg {
       transform: scale(1.5);
     }
