--- a/sass/index.scss
+++ b/sass/index.scss
@@ -14,5 +14,6 @@
 @import "components/cost-info";
 @import "components/quantity-adder";
 @import "components/product-gallery";
+@import "components/cart-menu";
 
 @import "pages/home";
