--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -57,6 +57,19 @@
       border: none;
       margin-right: 1.5em;
       cursor: pointer;
+      position: relative;
+
+      .count {
+        position: absolute;
+        right: 1em;
+        top: 1em;
+        font-size: .7em;
+        padding: .1em .6em;
+        font-weight: bold;
+        border-radius: 40%;
+        background-color: $color-primary;
+        color: $color-white;
+      }
       @media screen  and (max-width: $vw-mobile-min) {
         width: 2em;
         height: 2em;
@@ -66,8 +79,8 @@
       cursor: pointer;
       background: transparent;
       border-radius: 50%;
-      width: 5em;
-      height: 5em;
+      width: 4em;
+      height: 4em;
       position: relative;
       border: 2px solid transparent;
       img {
