--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -11,6 +11,8 @@
   transform: translateX(-100%);
   transition: transform 100ms ease-out;
   padding: 1.2rem;
+  visibility: hidden;
+
   .close-btn {
     padding: 1rem;
     background: none;
@@ -39,10 +41,11 @@
   }
 }
 .sidebar.active {
+  visibility: visible;
   transform: translateX(0%);
 }
 .sidebar.active + .sidebar_scrim {
-  background-color: rgba(0,0,0,.32);
+  background-color: $color-sidebar-backdrop;
   display: block;
 }
 .sidebar_scrim {
