--- a/sass/components/_cart-menu.scss
+++ b/sass/components/_cart-menu.scss
@@ -7,11 +7,25 @@
   box-shadow: $shadow-smooth-24;
   border-radius: .5em;
   background: $color-white;
+  @media screen and (max-width: $vw-mobile-min) {
+    width: 96%;
+    top: 10%;
+    right: 2%;
+    left: auto;
+  }
   &__header {
-    padding: 1.2rem;
+    padding: 1.3rem;
     border-bottom: 1px solid $color-lightgrayish-blue;
     font-size: 1.5em;
     font-weight: bold;
+  }
+  &__body {
+    min-height: 12rem;
+  }
+  &__body.empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &__item .img-wrapper {
     width: 4rem;
@@ -23,9 +37,14 @@
       border-radius: .4em;
     }
   }
+  &__empty {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: $color-darkgrayish-blue;
+  }
   &__item {
     font-size: 1rem;
-    padding: 1.2em;
+    padding: 1.2rem;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -36,6 +55,12 @@
       flex-basis: 70%;
       &--name {
         padding-bottom: .5em;
+        @media screen and (max-width: $vw-mobile-min){
+          text-overflow: ellipsis;
+          max-width: 200px;
+          overflow: hidden;
+          white-space: nowrap;
+        }
       }
       &--totalcost {
         color: $color-black;
