--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -69,6 +69,10 @@
         border-radius: 40%;
         background-color: $color-primary;
         color: $color-white;
+        @media screen and (max-width: $vw-mobile-min) {
+          right: -.3em;
+          top: -.3em;
+        }
       }
       @media screen  and (max-width: $vw-mobile-min) {
         width: 2em;
