--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ p {
     .header__usermenu--cart {
       width: 4em;
       height: 4em;
-      background: url("../../images/icon-cart.svg") no-repeat center;
+      background: url("/images/icon-cart.svg") no-repeat center;
       border: none;
       margin-right: 1.5em;
       cursor: pointer;
@@ -387,9 +387,9 @@ main {
     .quant__adder--minus:active, .quant__adder--plus:active {
       background-color: #b6bcc8; }
   .quant__adder--minus {
-    background: url("../../images/icon-minus.svg") no-repeat center; }
+    background: url("/images/icon-minus.svg") no-repeat center; }
   .quant__adder--plus {
-    background: url("../../images/icon-plus.svg") no-repeat center; }
+    background: url("/images/icon-plus.svg") no-repeat center; }
   .quant__adder span {
     min-width: 6ch;
     text-align: center;
