fix asset path bugs,add gh-pages deploy option

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -28,7 +28,7 @@ $vw-mobile-min: 375px;
 $vw-desktop-max: 1400px; 
 
 // PATH
-$image-path: "../../images";
+$image-path: "../images";
 
 // SHADOW 
 $shadow-smooth-8: 0 1px 1px hsla(0deg, 0%, 0% , 0.075),
