header ,cost-info improvments

--- a/sass/components/_cost-info.scss
+++ b/sass/components/_cost-info.scss
@@ -27,5 +27,8 @@
     font-size: .6em;
     text-decoration: line-through;
     color: $color-darkgrayish-blue;
+    @media screen and (max-width: $vw-mobile-min) {
+      font-size: .8em;
+    }
   }
 }
