--- a/css/index.css
+++ b/css/index.css
@@ -545,7 +545,7 @@ main {
   margin-bottom: 2rem; }
   @media screen and (max-width: 375px) {
     .product {
-      font-size: .7rem; } }
+      font-size: 0.7rem; } }
   .product .images {
     width: 45%;
     float: left;
@@ -570,17 +570,17 @@ main {
         padding: 1em; } }
     .product .details__company {
       color: #ff7d1a;
-      letter-spacing: .2em;
+      letter-spacing: 0.2em;
       font-size: 1.3em;
       font-weight: bold;
       text-transform: uppercase; }
-    .product .details h2 {
+    .product .details h1 {
       font-size: 4em;
       margin: 1em 0; }
       @media screen and (max-width: 375px) {
-        .product .details h2 {
+        .product .details h1 {
           font-size: 3em;
-          margin: .5em 0; } }
+          margin: 0.5em 0; } }
     .product .details p {
       color: #68707d;
       margin: 2em 0; }
