--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,15 @@ body {
 .hidden {
   display: none !important; }
 
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px; }
+
 body {
   font-family: 'Kumbh Sans', sans-serif;
   font-weight: 400; }
