--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-// COLORS 
+// COLORS
 $color-primary: hsl(26, 100%, 55%);
 $color-primary-light: hsl(25, 100%, 94%);
 
@@ -10,7 +10,7 @@ $color-lightgrayish-blue: hsl(220, 11%, 89%);
 $color-lightergrayish-blue: hsl(223, 64%, 98%);
 
 // sidebar backdrop
-$color-sidebar-backdrop: rgba(0,0,0,.32);
+$color-sidebar-backdrop: rgba(0, 0, 0, 0.32);
 
 // overlay colors
 $color-gray-1: rgba(255, 255, 255, 0.589);
@@ -19,23 +19,29 @@ $color-gray-2: rgba(255, 255, 255, 0.411);
 $color-white: hsl(0, 0%, 100%);
 $color-black: hsl(0, 0%, 0%);
 
-// FONT 
+// FONT
 $default-font-size: 1.6rem;
 
-
-// VIEWPORT 
-$vw-mobile-min: 375px; 
-$vw-desktop-max: 1400px; 
+// VIEWPORT
+$vw-sm: 640px;
+$vw-md: 768px;
+$vw-lg: 1024px;
+$vw-xl: 1280px;
+$vw-2xl: 1536px;
+$vw-desktop-max: 1400px;
 
 // PATH
 $image-path: "../images";
 
-// SHADOW 
-$shadow-smooth-8: 0 1px 1px hsla(0deg, 0%, 0% , 0.075),
-      0 2px 2px hsla(0deg ,0% ,0% ,0.075),
-      0 4px 4px hsla(0deg ,0% ,0% , 0.075),
-      0 8px 8px hsla(0deg ,0% ,0% , 0.075)
-    ;
-$shadow-smooth-16: 0 1px 1px hsla(0deg, 0% ,0% ,0.075),0 2px 2px hsla(0deg ,0%, 0% ,0.075),0 4px 4px hsla(0deg ,0%, 0%, 0.075),0 8px 8px hsla(0deg ,0%, 0% , 0.075),0 16px 16px hsla(0deg, 0% ,0%,  0.075);
+// SHADOW
+$shadow-smooth-8: 0 1px 1px hsla(0deg, 0%, 0%, 0.075),
+  0 2px 2px hsla(0deg, 0%, 0%, 0.075), 0 4px 4px hsla(0deg, 0%, 0%, 0.075),
+  0 8px 8px hsla(0deg, 0%, 0%, 0.075);
+$shadow-smooth-16: 0 1px 1px hsla(0deg, 0%, 0%, 0.075),
+  0 2px 2px hsla(0deg, 0%, 0%, 0.075), 0 4px 4px hsla(0deg, 0%, 0%, 0.075),
+  0 8px 8px hsla(0deg, 0%, 0%, 0.075), 0 16px 16px hsla(0deg, 0%, 0%, 0.075);
 
-$shadow-smooth-24: 0 1px 1px hsla(0deg, 0% ,0% ,0.08),0 2px 2px hsla(0deg ,0%, 0% ,0.08),0 4px 4px hsla(0deg ,0%, 0%, 0.08),0 8px 8px hsla(0deg ,0%, 0% , 0.08),0 16px 16px hsla(0deg, 0% ,0%,  0.08), 0 24px 24px hsla(0,0%,0%,0.08);
+$shadow-smooth-24: 0 1px 1px hsla(0deg, 0%, 0%, 0.08),
+  0 2px 2px hsla(0deg, 0%, 0%, 0.08), 0 4px 4px hsla(0deg, 0%, 0%, 0.08),
+  0 8px 8px hsla(0deg, 0%, 0%, 0.08), 0 16px 16px hsla(0deg, 0%, 0%, 0.08),
+  0 24px 24px hsla(0, 0%, 0%, 0.08);
