--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,21 +1,31 @@
 *,
 *::after,
 *::before {
-	margin: 0;
-	padding: 0;
-	box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 html {
-	// font-size: 16px; (browser default)
-	// defines what 1rem is
-	font-size: 62.5%;
+  // font-size: 16px; (browser default)
+  // defines what 1rem is
+  font-size: 62.5%;
 }
 body {
-	box-sizing: border-box;
+  box-sizing: border-box;
   max-width: $vw-desktop-max;
   margin: 0 auto;
 }
 
 .hidden {
   display: none !important;
+}
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
