--- a/sass/components/_product-gallery.scss
+++ b/sass/components/_product-gallery.scss
@@ -1,5 +1,10 @@
 .product__gallery {
   user-select: none;
+  font-size: 1em;
+  position: relative;
+  @media (max-width: $vw-xl) {
+    font-size: 0.9em;
+  }
   .stage {
     position: relative;
     background: none;
@@ -9,45 +14,46 @@
       cursor: pointer;
       background: none;
       border: none;
-      @media screen and (max-width: $vw-mobile-min){
-          pointer-events: none;
+      @media screen and (max-width: $vw-md) {
+        pointer-events: none;
       }
     }
-    &--previous,&--next {
+    &--previous,
+    &--next {
       position: absolute;
-      width: 4rem;
-      height: 4rem;
-      padding: 1rem;
+      width: 4em;
+      height: 4em;
+      padding: 1em;
       background: $color-lightergrayish-blue;
       border: 2px solid transparent;
       border-radius: 50%;
       box-shadow: $shadow-smooth-8;
       color: $color-primary;
       cursor: pointer;
-      &:hover > svg path{
+      &:hover > svg path {
         stroke: $color-primary;
       }
-      @media screen and (min-width: $vw-mobile-min){
+      @media screen and (min-width: $vw-sm) {
         display: none;
       }
     }
     &--previous {
       top: 49%;
       left: 10%;
-      transform: translate(-50%,-50%);
+      transform: translate(-50%, -50%);
     }
     &--next {
       top: 49%;
       right: 10%;
-      transform: translate(50%,-50%);
+      transform: translate(50%, -50%);
     }
     img {
       width: 100%;
-      border-radius: 1rem;
+      border-radius: 1em;
       object-fit: fill;
       object-position: center;
 
-      @media screen  and (max-width: $vw-mobile-min){
+      @media screen and (max-width: $vw-sm) {
         border-radius: 0;
       }
     }
@@ -55,34 +61,40 @@
   .altimages {
     display: flex;
     justify-content: space-between;
-    margin-top: 2rem;
-    @media screen  and (max-width: $vw-mobile-min){
+    margin-top: 2em;
+    flex-flow: row wrap;
+    gap: 1rem;
+    @media screen and (max-width: $vw-sm) {
       display: none;
+    }
+    @media screen and (max-width: $vw-lg) {
+      justify-content: center;
     }
   }
 
   .item {
-    width: 8.5rem;
-    height: 8.5rem;
+    width: 6.5em;
+    height: 6.5em;
     position: relative;
     cursor: pointer;
-    border-radius: 1.1rem;
+    border-radius: 1.1em;
     background: none;
     border: 2px solid transparent;
-    transition: opacity .3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    transition: opacity 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
     img {
       width: 100%;
+      height: 100%;
       object-fit: fill;
-      border-radius: 1rem;
+      border-radius: 1em;
     }
   }
   .item.active {
     border: 2px solid $color-primary;
   }
   .item.active img {
-    opacity: .3;
+    opacity: 0.3;
   }
   .item:hover img {
-    opacity: .5;
+    opacity: 0.5;
   }
 }
